--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,20 @@ services:
   web:
     build: .
     container_name: heavenknows_web
-    command: gunicorn app.heavenknows.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn --bind 0.0.0.0:4000 heavenknows.wsgi:application
     volumes:
-      - ./app:/app/app
-      - ./db.sqlite3:/app/db.sqlite3
-      - ./static:/app/static
-    expose:
-      - 8000
-    restart: always
+      - .:/app
+    ports:
+      - "4000:4000"
+    depends_on:
+      - nginx
 
   nginx:
-    image: nginx:alpine
+    image: nginx:latest
     container_name: heavenknows_nginx
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./static:/static
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
-    restart: always
