--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,13 @@ google-generativeai==0.8.5
 googleapis-common-protos==1.71.0
 grpcio==1.76.0
 grpcio-status==1.71.2
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
+packaging==25.0
 pillow==12.0.0
 proto-plus==1.26.1
 protobuf==5.29.5
@@ -29,7 +31,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.3
 pydantic_core==2.41.4
-# pygraphviz==1.14
+pygraphviz==1.14
 pyparsing==3.2.5
 python-decouple==3.8
 requests==2.32.5
